log-schemas/27.5/opcua_binary_create_monitored_items_create_item.rst
``opcua_binary_create_monitored_items_create_item`` field reference
-------------------------------------------------------------------

.. list-table::
   :header-rows: 1
   :class: longtable
   :widths: 1 3

   * - Field (Type)
     - Description

   * - ``ts`` (time)
     - The ts information.

   * - ``uid`` (string)
     - The uid information.

   * - ``id.orig_h`` (string - addr)
     - The originator's IP address.

   * - ``id.orig_p`` (integer - port)
     - The originator's port number.

   * - ``id.resp_h`` (string - addr)
     - The responder's IP address.

   * - ``id.resp_p`` (integer - port)
     - The responder's port number.

   * - ``create_item_link_id`` (string)
     - The create_item_link_id information.

   * - ``item_to_monitor_node_id_encoding_mask`` (string)
     - The item_to_monitor_node_id_encoding_mask information.

   * - ``item_to_monitor_node_id_namespace_idx`` (integer - count)
     - The item_to_monitor_node_id_namespace_idx information.

   * - ``item_to_monitor_node_id_numeric`` (integer - count)
     - The item_to_monitor_node_id_numeric information.

   * - ``item_to_monitor_node_id_string`` (string)
     - The item_to_monitor_node_id_string information.

   * - ``item_to_monitor_node_id_guid`` (string)
     - The item_to_monitor_node_id_guid information.

   * - ``item_to_monitor_node_id_opaque`` (string)
     - The item_to_monitor_node_id_opaque information.

   * - ``item_to_monitor_attribute_id`` (string)
     - The item_to_monitor_attribute_id information.

   * - ``item_to_monitor_index_range`` (string)
     - The item_to_monitor_index_range information.

   * - ``item_to_monitor_namespace_idx`` (integer - count)
     - The item_to_monitor_namespace_idx information.

   * - ``item_to_monitor_name`` (string)
     - The item_to_monitor_name information.

   * - ``monitoring_mode`` (string)
     - The monitoring_mode information.

   * - ``monitoring_parameters_client_handle`` (integer - count)
     - The monitoring_parameters_client_handle information.

   * - ``monitoring_parameters_sampling_interval`` (number - double)
     - The monitoring_parameters_sampling_interval information.

   * - ``monitoring_parameters_queue_size`` (integer - count)
     - The monitoring_parameters_queue_size information.

   * - ``monitoring_parameters_discard_oldest`` (boolean - bool)
     - The monitoring_parameters_discard_oldest information.

   * - ``monitoring_parameters_filter_info_type_id_node_id_encoding_mask`` (string)
     - The monitoring_parameters_filter_info_type_id_node_id_encoding_mask information.

   * - ``monitoring_parameters_filter_info_type_id_node_id_namespace_idx`` (integer - count)
     - The monitoring_parameters_filter_info_type_id_node_id_namespace_idx information.

   * - ``monitoring_parameters_filter_info_type_id_node_id_numeric`` (integer - count)
     - The monitoring_parameters_filter_info_type_id_node_id_numeric information.

   * - ``monitoring_parameters_filter_info_type_id_node_id_string`` (string)
     - The monitoring_parameters_filter_info_type_id_node_id_string information.

   * - ``monitoring_parameters_filter_info_type_id_node_id_guid`` (string)
     - The monitoring_parameters_filter_info_type_id_node_id_guid information.

   * - ``monitoring_parameters_filter_info_type_id_node_id_opaque`` (string)
     - The monitoring_parameters_filter_info_type_id_node_id_opaque information.

   * - ``monitoring_parameters_filter_info_type_id_string`` (string)
     - The monitoring_parameters_filter_info_type_id_string information.

   * - ``monitoring_parameters_filter_info_type_id_encoding`` (string)
     - The monitoring_parameters_filter_info_type_id_encoding information.

   * - ``filter_info_details_link_id`` (string)
     - The filter_info_details_link_id information.

   * - ``monitoring_parameters_status_code_link_id`` (string)
     - The monitoring_parameters_status_code_link_id information.

   * - ``monitored_item_index_id`` (integer - count)
     - The monitored_item_index_id information.

   * - ``monitoring_parameters_revised_sampling_interval`` (number - double)
     - The monitoring_parameters_revised_sampling_interval information.

   * - ``monitoring_parameters_revised_queue_size`` (integer - count)
     - The monitoring_parameters_revised_queue_size information.
